# LocalportManager

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY_ARCHITECTURE.md  coverage.xml  localportmanager.py  localportmanager_secure.py  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: ci.yml  coverage-badge.yml  docker.yml  publish.yml
examples/: basic_usage.sh  python_api.py
tests/: __init__.py  conftest.py  test_additional_coverage.py  test_edge_cases.py  test_integration.py  test_localportmanager.py  test_port_registry.py  test_proxy_handler.py  test_start_proxy.py
